codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_wraps_enterprise_monthly_credit_details_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

  >_ OpenAI Codex (v0.0.0-local3)

  Visit
  https://chatgpt.com/codex/settings/usage for
  up-to-date
  information on rate limits and credits

  Model:                 gpt-5.1-codex-max
                         (reasoning none,
                         summaries auto)
  Directory:             [[workspace]]
  Permissions:           Custom (workspace
                         with network access,
                         Ask for approval)
  Agents.md:             <none>

  Token usage:           1.2K total  (800
                         input + 400 output)
  Context window:        100% left (1.2K
                         used / 272K)
  Monthly credit limit:  68% left
                         (resets 07:08 on
                         7 May)
                         8,000 of 25,000
                         credits used
